[package]
name = "pyiced"
edition = "2021"
license = "MIT"

# KEEP SYNCHRONOUS TO SETUP.PY
authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
homepage = "https://github.com/Kijewski/pyiced"
# KEEP SYNCHRONOUS TO ICED {major.minor} WITH INCREASING PATCH LEVEL
version = "0.3.0"

[dependencies]
futures-util = "0.3"
iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "wgpu", "svg", "tokio"] }
iced_native = { version = "0.4", features = ["debug"] }
iced_wgpu = { version = "0.4", features = ["image", "svg"] }
ouroboros = "0.13"
parking_lot = { version = "0.11", features = ["arc_lock"] }
pyo3 = { version = "0.14", default-features = false, features = ["extension-module", "abi3", "abi3-py36"] }
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["parking_lot"] }

[lib]
name = "pyiced"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
