[package]
name = "_pyiced"
edition = "2021"
license = "MIT"

# KEEP SYNCHRONOUS TO CARGO.TOML
# KEEP SYNCHRONOUS TO DOCS/CONF.PY
# KEEP SYNCHRONOUS TO SETUP.PY
# KEEP SYNCHRONOUS TO REQUIREMENTS.READTHEDOCS.TXT

# KEEP SYNCHRONOUS TO ICED {major.minor} WITH INCREASING PATCH LEVEL

authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
homepage = "https://github.com/Kijewski/pyiced"
version = "0.3.0"

[lib]
name = "_pyiced"
crate-type = ["cdylib"]

[dependencies]
futures-util = "0.3"
iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "wgpu", "svg", "tokio"] }
iced_native = { version = "0.4", features = ["debug"] }
iced_wgpu = { version = "0.4", features = ["image", "svg"] }
mimalloc = { version = "0.1", features = ["secure", "local_dynamic_tls"] }
ouroboros = "0.13"
parking_lot = { version = "0.11", features = ["arc_lock"] }
pyo3 = { version = "0.14", default-features = false, features = ["extension-module", "abi3", "abi3-py36"] }
pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["parking_lot"] }

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
