[package]
name = "_pyiced"
edition = "2021"
license = "Apache-2.0"
authors = ["René Kijewski <pypi.org@k6i.de>"]
homepage = "https://github.com/Kijewski/pyiced"

# KEEP SYNCHRONOUS TO SETUP.CFG (version)
# KEEP SYNCHRONOUS TO REQUIREMENTS-READTHEDOCS.TXT (pyiced)
# KEEP SYNCHRONOUS TO LINKS IN README.MD (raw.githubusercontent.com)
# KEEP SYNCHRONOUS TO ICED {major.minor} WITH INCREASING PATCH LEVEL
# Rust uses semver (https://semver.org/).
# Python uses PEP 440 (https://www.python.org/dev/peps/pep-0440/).
# Normal releases are exactly the same.
# Pre-releases are X.Y.Z-aN in semver, and X.Y.ZaN in PEP 440.
# Post-releases are X.Y.Z+N in semver, and X.Y.Z.postN in PEP 440.
version = "0.3.0-a7"

[lib]
name = "_pyiced"
crate-type = ["cdylib"]

[dependencies]
iced = { version = "=0.3.0", default-features = false, features = ["canvas", "debug", "image", "svg", "tokio"] }
iced_native = { version = "=0.4.0", default-features = false, features = ["debug"] }
iced_wgpu = { version = "=0.4.0", default-features = false, optional = true }

fontdb = { version = "0.9.1", default-features = false, optional = true, features = ["fs", "memmap"] }
futures-util = { version = "0.3.21", default-features = false, features = ["alloc"] }
image = { version = "0.24.1", default-features = false, features = ["ico"] }
mimalloc = { version = "0.1.28", features = ["secure", "local_dynamic_tls"] }
ouroboros = "0.14.2"
parking_lot = { version = "0.12.0", features = ["arc_lock"] }
pyo3 = { version = "0.16.4", default-features = false, features = ["extension-module", "macros", "multiple-pymethods"] }
tokio = { version = "1.17.0", default-features = false, features = ["parking_lot", "sync"] }

[build-dependencies]
pyo3-build-config = "0.16.1"

[features]
default = ["wgpu", "fontdb"]
wgpu = ["iced_wgpu", "iced/wgpu"]

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
