[metadata]
name = pyiced

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Rust
    Topic :: Games/Entertainment

# KEEP SYNCHRONOUS TO CARGO.TOML
version = 0.3.0
author = René Kijewski
author_email = rene.[SURNAME]@fu-berlin.de
url = https://github.com/Kijewski/pyiced
license = MIT

[options]
packages = pyiced
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1
python_requires = >=3.6
include_package_data = True
