[metadata]
# keep synchronous to Cargo.toml
version = 0.3.0a3

name = pyiced
description = Bindings for Iced, a cross-platform GUI library focused on simplicity. Inspired by Elm.
author = René Kijewski
author_email = pypi.org@k6i.de
url = https://github.com/Kijewski/pyiced
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Rust
    Topic :: Games/Entertainment
    Topic :: Software Development :: User Interfaces

[options]
packages = pyiced
package_dir =
    = src
zip_safe = False
include_package_data = True
setup_requires = setuptools-rust == 1.*
python_requires = >= 3.7, < 4
